--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vaubia — Protégez l’essentiel</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vaubia</title>
   </head>
   <body>
     <div id="root"></div>
