--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vaubia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Vaubia • Plateforme</title>
+    <meta name="description" content="Vaubia — outils de croissance, dashboard, tarifs simples." />
+    <meta property="og:title" content="Vaubia" />
+    <meta property="og:description" content="Outils de croissance, dashboard, tarifs clairs." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.vaubia.com/" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="canonical" href="https://www.vaubia.com/">
   </head>
   <body>
     <div id="root"></div>
