--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vaubia • Plateforme</title>
-    <meta name="description" content="Vaubia — outils de croissance, dashboard, tarifs simples." />
-    <meta property="og:title" content="Vaubia" />
-    <meta property="og:description" content="Outils de croissance, dashboard, tarifs clairs." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.vaubia.com/" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="canonical" href="https://www.vaubia.com/">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vaubia</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="src/main.jsx"></script>
+</body>
 </html>
