--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vaubia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Vaubia — Assistants IA & outils pour PME" />
     <link rel="icon" href="/favicon.ico" />
+    <title>Vaubia</title>
   </head>
   <body>
     <div id="root"></div>
