--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Vaubia — Assistants IA & outils pour PME" />
-    <link rel="icon" href="/favicon.ico" />
-    <title>Vaubia</title>
+    <title>Vaubia — Pare-feu de la vie</title>
+    <meta name="description" content="Le pare-feu de votre vie privée : masquez email et téléphone, bloquez les fuites de données, centralisez vos demandes RGPD.">
+    <link rel="icon" href="/favicon.svg">
   </head>
   <body>
     <div id="root"></div>
